# MickoHTML

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
Micko/: .make.out2  .travis.yml  CMakeLists.txt  Makefile  codegen.c  codegen.h  color_mc.html  execute_tests  lex.yy.c  micko  micko.l  micko.output  micko.tab.c  micko.tab.h  micko.y  output.html  prikaz.html  rules.html  symtab.c  symtab.h  test-ok1.mc  test-sanity1.asm.ok  test-sanity1.mc  test-semerr1.mc
Micko/include/: defs.h
Micko/test/: ok-2.mc  test-ok3.mc
MickoView/: package.json  server.js
MickoView/site/: 404.html  500.html  index.html
MickoView/site/css/: style.css
MickoView/site/js/: script.js
