CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(Micko)

SET(MICKO_DIR "${CMAKE_SOURCE_DIR}/Micko")
SET(MICKO_SRC_DIR "${MICKO_DIR}/src")
SET(MICKO_INC_DIR "${MICKO_DIR}/include")


FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)


FLEX_TARGET(Lexer
  "${MICKO_DIR}/micko.l"
  "${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c")
BISON_TARGET(Parser
  "${MICKO_DIR}/micko.y"
  "${CMAKE_CURRENT_BINARY_DIR}/micko.tab.c")
ADD_FLEX_BISON_DEPENDENCY(Lexer Parser)


ADD_EXECUTABLE("${PROJECT_NAME}"
  "${MICKO_SRC_DIR}/codegen.c"
  "${MICKO_SRC_DIR}/symtab.c"
  "${BISON_Parser_OUTPUTS}"
  "${FLEX_Lexer_OUTPUTS}")
TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}"
  PUBLIC
  "${MICKO_INC_DIR}"
  "${CMAKE_CURRENT_BINARY_DIR}")
