CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(Micko)

SET(SRC_DIR "${CMAKE_SOURCE_DIR}/src")
SET(INC_DIR "${CMAKE_SOURCE_DIR}/include")


FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)


FLEX_TARGET(Lexer
  "${CMAKE_SOURCE_DIR}/micko.l"
  "${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c")
BISON_TARGET(Parser
  "${CMAKE_SOURCE_DIR}/micko.y"
  "${CMAKE_CURRENT_BINARY_DIR}/micko.tab.c")
ADD_FLEX_BISON_DEPENDENCY(Lexer Parser)


ADD_EXECUTABLE("${PROJECT_NAME}"
  "${SRC_DIR}/codegen.c"
  "${SRC_DIR}/symtab.c"
  "${BISON_Parser_OUTPUTS}"
  "${FLEX_Lexer_OUTPUTS}")
TARGET_INCLUDE_DIRECTORIES("${PROJECT_NAME}"
  PUBLIC
  "${INC_DIR}"
  "${CMAKE_CURRENT_BINARY_DIR}")

ENABLE_TESTING()
ADD_TEST(TEST
  "${CMAKE_SOURCE_DIR}/execute_tests"
    "${CMAKE_BINARY_DIR}/${PROJECT_NAME}"
    "${CMAKE_SOURCE_DIR}/test")
