CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(Micko)

SET(SRC_DIR "${CMAKE_SOURCE_DIR}/src")
SET(INC_DIR "${CMAKE_SOURCE_DIR}/include")


FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)


FLEX_TARGET(Lexer
  "${CMAKE_SOURCE_DIR}/micko.l"
  "${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c")
BISON_TARGET(Parser
  "${CMAKE_SOURCE_DIR}/micko.y"
  "${CMAKE_CURRENT_BINARY_DIR}/micko.tab.c")
ADD_FLEX_BISON_DEPENDENCY(Lexer Parser)


INCLUDE_DIRECTORIES(
  "${INC_DIR}"
  "${CMAKE_CURRENT_BINARY_DIR}")
ADD_EXECUTABLE("${PROJECT_NAME}"
  "${SRC_DIR}/codegen.c"
  "${SRC_DIR}/symtab.c"
  "${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c"
  "${CMAKE_CURRENT_BINARY_DIR}/micko.tab.c")


ENABLE_TESTING()
ADD_TEST(TEST
  "${CMAKE_SOURCE_DIR}/execute_tests"
    "${CMAKE_BINARY_DIR}/${PROJECT_NAME}"
    "${CMAKE_SOURCE_DIR}/test")
